# Shiver

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Build_docs.txt  README-Flask.md  README.md  define_data_IPTS_21819.py  define_data_IPTS_21907.py  define_data_example1.py  define_slices_IPTS_21819.py  define_slices_example1.py  environment.yml  environment_deploy.yml  gemini-convo.txt  index.html  oncat_example.py  oncat_functions.py  oncat_util.py  params.json  pyproject.toml  reduce_data_to_MDE.py  refine.py  run_trame.py  setup.cfg  setup.py  slice_maker_IPTS_21819.py  slice_maker_example1.py  slice_maker_example_polarized.py  slice_maker_unpolarized_IPTS_21907.py  slice_utils.py  start_web.sh
.github/workflows/: actions.yml  package.yml  test.yml  test_and_deploy.yml  update-lockfiles.yml
DGS_SC_scripts/: README.md  define_data_example1.py  define_data_example_polarized.py  define_slices_example1.py  define_slices_example_polarized.py  oncat_util.py  reduce_data_to_MDE.py  slice_maker_example1.py  slice_maker_example_polarized.py  slice_utils.py
conda.recipe/: meta.yaml
docs/: .jekyll-metadata  GUI.md  Gemfile  Makefile  _config.yml  data_description.md  examples.md  future.md  index.md  install.md  main.md  make.bat  references.md  requirements.txt  slice_description.md  utility.md
docs/GUI/: additional_ui.md  generate.md  index.md  main_window.md  refine_ub.md
docs/Scripting/: data_description.md  index.md  main.md  slice_description.md  utility.md
docs/_layouts/: default.html
docs/_site/: 404.html  feed.xml  index.html
docs/_site/404/: index.html
docs/_site/GUI/: index.html
docs/_site/GUI/additional_ui/: index.html
docs/_site/GUI/generate/: index.html
docs/_site/GUI/main_window/: index.html
docs/_site/GUI/refine_ub/: index.html
docs/_site/Scripting/: index.html
docs/_site/Scripting/data_description/: index.html
docs/_site/Scripting/examples/: index.html
docs/_site/Scripting/main/: index.html
docs/_site/Scripting/slice_description/: index.html
docs/_site/Scripting/utility/: index.html
docs/_site/about/: index.html
docs/_site/future/: index.html
docs/_site/install/: index.html
docs/_site/references/: index.html
docs/source/: api.rst  conf.py  deploy.rst  getting_started.rst  index.rst  reading_materials.rst  repo_doc.rst  usage.rst
src/shiver/: __init__.py  configuration.py  configuration_template.ini  configuration_template.json  shiver.py  version.py
src/shiver/models/: ConvertDGSToMDE.py  ConvertDGSToSingleMDE.py  GenerateDGSMDE.py  configuration.py  convert_dgs_to_single_mde.py  corrections.py  generate.py  generate_dgs_mde.py  help.py  histogram.py  makeslice.py  makeslices.py  polarized.py  refine_ub.py  sample.py  utils.py
src/shiver/presenters/: configuration.py  generate.py  histogram.py  polarized.py  refine_ub.py  sample.py
src/shiver/trame_app/: configuration.py  configuration_adapter.py  corrections.py  corrections_adapter.py  generate.py  generate_adapter.py  histogram.py  histogram_adapter.py  polarized.py  polarized_adapter.py  refine_ub.py  refine_ub_adapter.py  sample.py  sample_adapter.py  ui.py
src/shiver/views/: advanced_options.py  configuration.py  corrections.py  data.py  generate.py  histogram.py  histogram_parameters.py  invalid_styles.py  loading_buttons.py  mainwindow.py  minimise_background.py  minimize_background.py  oncat.py  plots.py  polarized_options.py  reduction_parameters.py  refine_ub.py  sample.py  sample_parameters.py  workspace_icons.py  workspace_tables.py
src/shiver/web/: app.py
src/shiver/web/static/: style.css
src/shiver/web/templates/: base.html  configuration.html  generate.html  help.html  histogram.html  index.html  polarized.html  refine_ub.html  sample.html
tests/: conftest.py
tests/data/: HYS_groups.xml  define_data.py
tests/data/normalization/: TiZr.nxs
tests/data/raw/: HYS_178921.nxs.h5  HYS_178922.nxs.h5  HYS_178923.nxs.h5  HYS_178925.nxs.h5  HYS_178926.nxs.h5  HYS_371495.nxs.h5  isaw_ub.mat  ls_5637.mat  ub_process_nexus.nxs
tests/models/: test_configuration.py  test_corrections.py  test_gather_history.py  test_generate_model.py  test_generatemde.py  test_histogram_saving.py  test_load.py  test_makeslice.py  test_makeslices.py  test_plot_display_name.py  test_refine_ub.py  test_sample_parameters_buttons_actions.py  test_sample_parameters_invalid_inputs.py  test_save.py  test_show_version.py  test_symmetry_operations.py  test_utils.py
tests/views/: test_advanced_options_inputs.py  test_configuration_settings.py  test_correction.py  test_dimensions.py  test_generate.py  test_histogram.py  test_histogram_button.py  test_loading_buttons.py  test_mainwindow.py  test_mde_workspaces.py  test_mdh_workspaces.py  test_minimize_background.py  test_oncat.py  test_plots.py  test_polarized_options.py  test_projections.py  test_raw_data.py  test_reduction_parameters_inputs.py  test_refine_ub_ui.py  test_sample_parameters.py  test_sample_parameters_buttons.py  test_sample_parameters_inputs.py
trame-docs/: README.md  design.md  gemini-convo.md
