[project]
name = "shiver"
description = "Spectroscopy Histogram Visualizer for Event Reduction"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "mantidworkbench >= 6.12",
    "pyoncat ~= 1.6",
    "configupdater"
]
license = { text = "GPL3.0" }

[project.urls]
homepage = "https://github.com/neutrons/Shiver/"

[build-system]
requires = [
  "setuptools",
   "wheel",
   "toml",
   "versioningit"
]
build-backend = "setuptools.build_meta"

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/shiver/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "DGS_SC_scripts*"]

[tool.setuptools.package-data]
"*" = ["*.yml","*.yaml","*.ini"]

[project.gui-scripts]
shiver = "shiver.shiver:gui"

[tool.pylint]
max-line-length = 120
disable = ["too-many-locals",
           "too-many-statements",
           "too-many-instance-attributes",
           "too-many-arguments",
           "duplicate-code"
]
extension-pkg-whitelist = ["PyQt5"]
