[project]
name = "shiver"
description = "Spectroscopy Histogram Visualizer for Event Reduction"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
]
readme = "README.md"
license = { text = "GPL3.0" }

[project.urls]
homepage = "https://github.com/neutrons/Shiver/"
repository = "https://github.com/neutrons/Shiver/"
documentation = "https://neutrons.github.io/Shiver/"

[project.gui-scripts]
shiver = "shiver.shiver:gui"

[build-system]
requires = [
  "hatchling",
  "wheel",
  "toml",
  "versioningit"
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build]
artifacts = ["*.yml", "*.yaml", "*.json"]

[tool.hatch.build.hooks.versioningit-onbuild]
source-file = "src/shiver/_version.py"
build-file = "shiver/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/shiver"]

[tool.versioningit.write]
file = "src/shiver/_version.py"

[tool.versioningit.vcs]
method = "git"
default-tag = "4.0.0"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}"
distance-dirty = "{next_version}.dev{distance}"

#pylint
[tool.pylint]
max-line-length = 120
disable = ["too-many-locals",
           "too-many-statements",
           "too-many-instance-attributes",
           "too-many-arguments",
           "too-many-positional-arguments",
           "duplicate-code"
]
extension-pkg-whitelist = ["PyQt5"]
ignore = ["pixi.lock"]


# ------------------ #
# Pixi configuration #
# ------------------ #
[tool.pixi.workspace]
preview = ["pixi-build"] # Need this to access pixi-build feature
platforms = ["linux-64"]
channels = [
  "conda-forge",
  "https://prefix.dev/pixi-build-backends",
  "mantid-ornl",
  "mantid",
  "neutrons",
  "oncat"
]

[tool.pixi.package]
name = "shiver"
version = "0.0.0" # placeholder, can be updated by task sync-version

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.1.*" }

[tool.pixi.package.host-dependencies]
hatchling = "*"
versioningit = "*"

[tool.pixi.package.run-dependencies]
toml = "*"

[tool.pixi.dependencies]
toml = ">=0.10.2,<0.11"
mantidworkbench = ">=6.12"
pyoncat = ">=2.1"
pyoncatqt =">=1.2.0"
configupdater = "*"

[tool.pixi.pypi-dependencies]
shiver = { path = ".", editable = true }
toml-cli = ">=0.7.0,<0.8"

[tool.pixi.environments]
default = { features = ["package", "developer","docs","test",], solve-group = "default" }

[tool.pixi.feature.package.dependencies]
#conda package
anaconda-client = ">=1.13.0,<2"
twine = ">=6.1.0,<7"
versioningit = "*"
hatch = "*"
#python package
pip = "*"

#code analysis tools
[tool.pixi.feature.developer.dependencies]
pip-audit = ">=2.9.0,<3"
pre-commit = "*"
pylint = "*"
codecov = ">=2.1.13"

#readthedocs
[tool.pixi.feature.docs.dependencies]
sphinx = ">=8"
sphinx_rtd_theme = ">=3.0.1"

#pytest
[tool.pixi.feature.test.dependencies]
pytest = ">=8.4.1"
pytest-qt = ">=4.4.0"
pytest-cov = ">=6.2.1"
pytest-mock = ">=3.14.1"
pytest-xvfb = ">=3.1.1"

[tool.pixi.tasks]
# PyPI
build-sdist = { cmd = "hatch build sdist", description = "Build the source distribution (tar.gz)" }
build-pypi = { cmd = "hatch build", description = "Build the package for PyPI" }
clean-pypi = { cmd = "rm -rf dist", description = "Clean the PyPI build artifacts" }
publish-pypi = { cmd = "twine upload dist/*", description = "Publish the package to PyPI", depends-on = [
  "build-pypi",
] }
# Conda
build-conda-command = { cmd = "pixi build", description = "Build the conda package command" }
build-conda = { description = "Build the conda package", depends-on = [
  "sync-version",
  "build-conda-command",
  "reset-version",
] }
clean-conda = { cmd = "rm shiver-*.conda", description = "Clean the conda build artifacts" }
# MISC
clean-all = { description = "Clean all build artifacts", depends-on = [
  "reset-version",
  "clean-pypi",
  "clean-conda",
] }
sync-version = { cmd = "version=$(python -m versioningit); toml set tool.pixi.package.version \"$version\" --toml-path pyproject.toml" }
reset-version = { cmd = "toml set tool.pixi.package.version \"0.0.0\" --toml-path pyproject.toml", description = "Reset the package version to 0.0.0" }
audit-deps = { cmd = "pip-audit --local -s osv" }
