[metadata]
name = shiver
version = 0.0.1
distance = 0
description = Spectroscopy Histogram Visualizer for Event Reduction
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/neutrons/Shiver/
license = GPL3.0

[options]
package_dir =
    =src
include_package_data = True
packages = find:
python_requires >= 3.8
install_requires =
    mantidworkbench
    pyoncat == 1.4.1
    qtpy
tests_require =
    pylint
    flake8
    black
    mypy
    pytest
    mock

[options.entry_points]
console_scripts =
    shiver = shiver.__init__:main

[options.packages.find]
where =
    src
exclude =
    tests*
    DGS_SC_scripts*

[options.package_data]
* =
   *.txt
   *.yml
   *.yaml
   *.ini

[options.extras_require]
dev =
    versioningit
tests = pytest

[flake8]
max-line-length = 120
ignore = E203, W503
exclude = conda.recipe/meta.yml

[versioning]
source-version-file = shiver/_version.py
version-pattern = {tag}
commit-message-pattern = {raw}
tag-message-pattern = {raw}

[coverage:run]
source = src/shiver
omit =
    */tests/*
    conda.recipe/*
    docs/*
    DGS_SC_scripts/*

[coverage:report]
 # temp set low until project is more developed, default 60
fail_under = 1
exclude_lines =
  if __name__ == "__main__":
